# Vulcan-Eruptor

./: .gitignore  CMakeLists.txt  Eruptor.kdev4
cmake/modules/: libs_maker.cmake  shader.cmake  test_program_maker.cmake
doc/: dependencies.dot  dependencies.dot.VulkanMemoryAllocator-Hpp.dependers  dependencies.dot.VulkanVulkan.dependers  dependencies.dot.app  dependencies.dot.assimpassimp  dependencies.dot.assimpassimp.dependers  dependencies.dot.eruptor_engine  dependencies.dot.eruptor_engine.dependers  dependencies.dot.eruptor_event.dependers  dependencies.dot.eruptor_hardware  dependencies.dot.eruptor_hardware.dependers  dependencies.dot.eruptor_physic  dependencies.dot.eruptor_physic.dependers  dependencies.dot.eruptor_renderer  dependencies.dot.eruptor_renderer.dependers  dependencies.dot.eruptor_resource  dependencies.dot.eruptor_resource.dependers  dependencies.dot.eruptor_scene  dependencies.dot.eruptor_scene.dependers  dependencies.dot.glfw.dependers  dependencies.dot.glmglm  dependencies.dot.glmglm-header-only.dependers  dependencies.dot.glmglm.dependers  dependencies.dot.main_shader.dependers  dependencies.dot.poly2tri.dependers  dependencies.dot.pugixml.dependers  dependencies.dot.rt.dependers  dependencies.dot.usrlib64libz.so.dependers
engine/: CMakeLists.txt
engine/hardware/: CMakeLists.txt
engine/hardware/include/Eruptor/: hardware.hpp
engine/hardware/include/Eruptor/event/: event.hpp  event_listener.hpp  event_manager.hpp  keys.hpp
engine/hardware/include/Eruptor/hardware/: command_manager.hpp  core.hpp  memory_units.hpp  pipeline_id.hpp  pipelines.hpp  swapchain.hpp  uniform_buffers.hpp  utilities.hpp  window.hpp
engine/hardware/include/Eruptor/hardware/resources/: mesh.hpp  push_constant.hpp  push_constants.hpp  resource_manager.hpp  vertex.hpp
engine/hardware/shaders_src/: debug.slang
engine/hardware/src/event/: event_listener.cpp  event_manager.cpp
engine/hardware/src/hardware/: command_manager.cpp  core.cpp  device.cpp  hardware.cpp  pipeline.cpp  pipelines.cpp  swapchain.cpp  uniform_buffers.cpp  utilities.cpp  window.cpp
engine/hardware/src/hardware/resources/: push_constant.cpp  resource_manager.cpp  texture.cpp
engine/include/Eruptor/: eruptor.hpp  renderer.hpp  resource_manager.hpp
engine/include/Eruptor/renderer/: render_queue.hpp  render_request.hpp
engine/include/Eruptor/resource/: material.hpp  model.hpp  model_load_bonus_data.hpp  resource.hpp  resource_handle.hpp
engine/include/Eruptor/scene/: render_object.hpp  scene.hpp  transformation.hpp
engine/physic/: CMakeLists.txt
engine/physic/include/Eruptor/physic/: colision_box.hpp  physic_manager.hpp
engine/physic/src/: colision_box.cpp  physic_manager.cpp
engine/src/: eruptor.cpp
engine/src/renderer/: cameras.cpp  renderer.cpp
engine/src/resource/: resource.cpp  resource_handle.cpp  resource_manager.cpp
engine/src/scene/: render_object.cpp  scene.cpp  transformation.cpp
include/: app.hpp  colors.hpp  gp_communicator.hpp
include/libs/Eruptor/: eruptor.hpp
include/libs/Eruptor/lib/: hardware.hpp  renderer.hpp  resource_manager.hpp
include/libs/Eruptor/lib/event/: event.hpp  event_listener.hpp  event_manager.hpp
include/libs/Eruptor/lib/hardware/: command_manager.hpp  device.hpp  geometry_buffer.hpp  globals.hpp  memory_units.hpp  mesh.hpp  pipeline.hpp  resource_manager.hpp  swapchain.hpp  texture.hpp  uniform_buffers.hpp  utilities.hpp  utility_structures.hpp  vertex.hpp  vertex_buffer.hpp  window.hpp
include/libs/Eruptor/lib/hardware/resources/: geometry_buffer.hpp  mesh.hpp  resource_manager.hpp  texture.hpp  vertex.hpp
include/libs/Eruptor/lib/platform/: core.hpp  device.hpp  globals.hpp  pipeline.hpp  utility_structures.hpp  window.hpp
include/libs/Eruptor/lib/renderer/: cameras.hpp  renderer.hpp
include/libs/Eruptor/lib/resource/: material.hpp  model.hpp  resource_handle.hpp  resource_manager.hpp
include/libs/Eruptor/lib/scene/: render_object.hpp  scene.hpp
include/libs/eruptor/Eruptor/: core.hpp  debug_handler.hpp
include/libs/eruptor/Eruptor/lib/: platform.hpp
include/libs/eruptor/Eruptor/lib/platform/: core.hpp  device.hpp  swapchain.hpp
shaders_src/: shader.slang
src/: .app.cpp.kate-swp  app.cpp  gp_communicator.cpp  main.cpp
src/eruptor/: core.cpp  debug_handler.cpp  eruptor.cpp  hardware.cpp  platform.cpp
src/eruptor/event/: event_listener.cpp  event_manager.cpp
src/eruptor/hardware/: .pipeline.cpp.kate-swp  command_manager.cpp  core.cpp  device.cpp  geometry_buffer.cpp  mesh.cpp  pipeline.cpp  resource_manager.cpp  swapchain.cpp  texture.cpp  uniform_buffers.cpp  utilities.cpp  vertex_buffer.cpp  window.cpp
src/eruptor/hardware/resources/: geometry_buffer.cpp  push_constant.cpp  resource_manager.cpp  texture.cpp
src/eruptor/platform/: .device.cpp.kate-swp  .pipeline.cpp.kate-swp  core.cpp  device.cpp  pipeline.cpp  swapchain.cpp  window.cpp
src/eruptor/renderer/: cameras.cpp  renderer.cpp
src/eruptor/resource/: resource.cpp  resource_handle.cpp  resource_manager.cpp
src/eruptor/scene/: render_object.cpp  scene.cpp  transformation.cpp
tmp_models/ball/: ball.mtl
tmp_models/blob/: blob.fbx  blob.glb  blob.mtl
tmp_models/dziura/: dziura.mtl
tmp_models/platform/: Untitled.mtl
